--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.qtc_clangd/
+moc_predefs.h
+
 # C++ objects and libs
 
 *.slo
@@ -39,6 +42,7 @@ Makefile
 
 # Executable
 ./KShare
+/src/kshare
 
 # Other
 *.out
